--- a/main.css
+++ b/main.css
@@ -3,4 +3,7 @@
     width: 200px; 
     height: 50px; 
     background-repeat: no-repeat;
+    border:black; 
+    border-width:1px; 
+    border-style:solid;
 }
