--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 
-._button {
+#_button {
     width: 200px; 
     height: 50px; 
+    background-image: url("assets/pullybg.png");  
     background-repeat: no-repeat;
-    border:black; 
-    border-width:1px; 
+    background-color: white;
+    border: none; 
+/*    border-width:1px; 
     border-style:solid;
-}
+*/}
