--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
+* {
+    background-repeat: no-repeat;
+    border: none;
+}
 
 #_button {
     width: 200px; 
     height: 50px; 
     background-image: url("assets/pullybg.png");  
-    background-repeat: no-repeat;
-    background-color: white;
-    border: none; 
+    background-color: white; 
 /*    border-width:1px; 
     border-style:solid;
 */}
